--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,6 +6,10 @@ $pageWidth: 1080px;
 $widePicWidth: 8570px;
 $halfPicWidth: 530px;
 
+ul, li{
+    list-style: none;
+}
+
 /* Text color */
 $titleColor: #353535;
 $baseColor: #696969;
@@ -22,7 +26,7 @@ body {
     padding: 0;
     color: $baseColor;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 17px;
 }
 app-root {
     position: relative;
