--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -87,9 +87,9 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        background-color: #27282d;
+                        background-color: #000;
                         opacity: 0;
-                        @include transition(opacity .6s ease);
+                        @include transition(opacity .5s ease);
                         &:after {
                             position: absolute;
                             top: 0;
@@ -237,17 +237,18 @@
                 & a {
                     display: inline-block;
                     margin-top: 215px;
-                    width: 60px;
+                    width: 45px;
                     height: 85px;
                     background: rgba(0, 0, 0, 0.6);
                     opacity: .6;
                     font-size: 1.313em;
                     font-weight: 100;
                     color: #fff;
+                    text-align: center;
                     & i {
                         display: inline-block;
-                        width: 24px;
-                        height: 45px;
+                        width: 16px;
+                        height: 30px;
                         overflow: hidden;
                         text-indent: 101%;
                         background: url(/assets/images/ico-grp.png) no-repeat;
@@ -256,13 +257,13 @@
                 & .next {
                     float: right;
                     & i {
-                        margin: 20px 19px;
+                        margin: 30px 0;
                         background-position: 0 0;
                     }
                 }
                 & .prev {
                     & i {
-                        margin: 20px 17px;
+                        margin: 30px 0;
                         background-position: -24px 0;
                     }
                 }
