--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -57,7 +57,7 @@
         
 </div>
 
-<div class="gnb-link">
+<div class="instagram-link">
     <ul>
         <li>
 
@@ -66,7 +66,7 @@
         </li>
         <li>
             <span>
-                <a href="https://www.instagram.com/doorisan_farmer/"><i class="insta-logo"></i>바로가기<i class="arrow"></i></a>
+                <a href="https://www.instagram.com/doorisan_farmer/"><i class="insta-logo"></i>인스타그램 바로가기<i class="arrow"></i></a>
             </span>
         </li>
     </ul>
