--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="logo">
-    <h1><a href="/"><span class="logo-image">두리산 농장 유주원</span></a></h1>
+    <h1><a href="/"><span class="logo-image">두리산 농장 서인보</span></a></h1>
 </div>
 <div class="menu"></div>
