--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,33 +1,27 @@
 <div id="sparassis-crispa" class="boundary sparassis-crispa" [style.height]="sectionHeight + 'px'">
     <div class="bg"></div>
     <div class="mush-content">
-        
-            <h2>탁월한 항암 효능, 꽃송이버섯</h2>
-            
-            <div class="image-grp">
-               <img src="/assets/images/mush-01.jpg" alt=""> 
-               <img src="/assets/images/mush-graph.png" alt="">
-            </div>
-            <div class="desc">
-                <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다. 
-                        꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
-                <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
-                    <dl>
-                        <dt>명품! 꽃송이버섯의 효능</dt>
-                        <dd>
-                            TV조선 내 몸 사용설명서 110회
-                            <span class="link-btn">자세히 보기</span>
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-
-        
-        
+        <h2>탁월한 항암 효능, 꽃송이버섯</h2>
+        <div class="image-grp">
+            <img src="/assets/images/mush-01.jpg" alt="">
+            <img src="/assets/images/mush-graph.png" alt="">
+        </div>
+        <div class="desc">
+            <p>꽃송이버섯은 가장 많은 베타글루칸이 함유된 천연물입니다. 베타글루칸은 잘 알려진 항암 물질이며 혈당과 혈중 콜레스테롤 감소에도 효과가 있습니다.
+                    꽃송이버섯의 베타글루칸 함유량은 잎새버섯이나 아가리쿠스 보다 3~5배 많아 버섯 중에서도 으뜸이라 할 수 있습니다.</p>
+            <a class="source-link" href="https://youtu.be/wUVvBqsMN1A" target="_blank">
+                <dl>
+                    <dt>명품! 꽃송이버섯의 효능</dt>
+                    <dd>
+                        TV조선 내 몸 사용설명서 110회
+                        <span class="link-btn">자세히 보기</span>
+                    </dd>
+                </dl>
+            </a>
+        </div>
     </div>
 </div>
-
-<div id="grape" class="boundary sparassis-crispa grape-bg">
+<!-- <div id="grape" class="boundary sparassis-crispa grape-bg">
     <div class="bg grape-bg2"></div>
     <div class="inner-content">
         <div class="image grape">
@@ -38,31 +32,23 @@
            <p>두리산농장은 삼백(三白)의 고장 경상북도 상주에 있습니다. 시내에서도 차로 한참을 달려 큰 산을 하나 넘어가면 나오는 곳입니다. 고도가 높고 주변이 산으로 둘러싸인 탓인지 낮과 밤의 기온 차가 커 한여름 밤에도 찬바람이 부는 이곳은 맛있는 과일이 자라기 좋은 환경입니다. 너무 더우면 맛에 향이 없고, 너무 춥기만 하면 당도가 떨어지기 마련입니다. 고랭지가 가지는 지리적 특성은 포도가 뛰어난 색(色), 향(香), 미(味)를 가질 수 있도록 해줍니다.</p>
         </div>
     </div>
-    
-</div>
 
+</div>
 <div id="wasong" class="boundary sparassis-crispa">
-        <div class="bg wasong-bg2"></div>
-        <div class="inner-content">
-            <div class="typo">
-                    <h2>탁월한 항암 효능, 와송</h2>
-                    <p>지붕 위 기와에서 자라는 모습이 소나무 꽃과 닮았다고 해서 와송이라 부릅니다.  맛은 시고 쓰며 성질은 서늘합니다. 간경(肝經) · 폐경(肺經)에 작용하고 열을 내리고 해독하며 출혈을 멎게 하고 습사(濕邪)를 없애며 부기를 가라앉힙니다. 약리 실험에서 해열 작용이 밝혀졌습니다. 토혈, 코피, 적리(赤痢), 학질, 열림(熱淋), 치질, 옹종(癰腫), 정창(疔瘡), 습진, 화상 등에 쓰고 간염에도 씁니다. 하루 15~30g을 탕제 · 환제 형태로 먹거나 신선한 것을 짓찧어 즙을 내어 먹습니다. 
-                            </p>
-                    <small>《한의학대사전》내용 중</small>
-            
-            </div>
-            <div class="image wasong"></div>
-
+    <div class="bg wasong-bg2"></div>
+    <div class="inner-content">
+        <div class="typo">
+            <h2>탁월한 항암 효능, 와송</h2>
+            <p>지붕 위 기와에서 자라는 모습이 소나무 꽃과 닮았다고 해서 와송이라 부릅니다.  맛은 시고 쓰며 성질은 서늘합니다. 간경(肝經) · 폐경(肺經)에 작용하고 열을 내리고 해독하며 출혈을 멎게 하고 습사(濕邪)를 없애며 부기를 가라앉힙니다. 약리 실험에서 해열 작용이 밝혀졌습니다. 토혈, 코피, 적리(赤痢), 학질, 열림(熱淋), 치질, 옹종(癰腫), 정창(疔瘡), 습진, 화상 등에 쓰고 간염에도 씁니다. 하루 15~30g을 탕제 · 환제 형태로 먹거나 신선한 것을 짓찧어 즙을 내어 먹습니다.</p>
+            <small>《한의학대사전》내용 중</small>
         </div>
-        
-</div>
-
-<div class="instagram-link">
+        <div class="image wasong"></div>
+    </div>
+</div> -->
+<div class="gnb-link">
     <ul>
         <li>
-
             <span>"<b>농장</b>의 <b>이야기</b>를 들어보세요"</span>
-            
         </li>
         <li>
             <span>
