--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-<!-- <div id="grape" class="boundary sparassis-crispa grape-bg">
+<div id="grape" class="boundary sparassis-crispa grape-bg">
     <div class="bg grape-bg2"></div>
     <div class="inner-content">
         <div class="image grape">
@@ -44,7 +44,7 @@
         </div>
         <div class="image wasong"></div>
     </div>
-</div> -->
+</div>
 <div class="gnb-link">
     <ul>
         <li>
