--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -67,8 +67,25 @@
             max-width: 1400px;
             padding:90px 0 60px;
             position: relative;
+            @media screen and (max-width: 980px) {
+                width:100%;
+                padding: 0 45px;
+                h2{
+                    text-align: left !important;                    
+                }
+                .image-grp{
+                    img{
+                     width: 100%;
+                     &:nth-child(1){
+                         margin-right: 0;
+                         margin-bottom: 30px;
+                     }
+                    }
+                    
+                }
+            }
             h2{
-                font-size: 28px;
+                font-size: 1.750em;
                 text-align: center;
                 margin-bottom: 50px;
             }
@@ -135,6 +152,7 @@
                 
                 @media screen and (max-width: 800px) {
                     display: none;
+                    //width: 100%;
                 }
                 @media screen and (min-width: 801px) and (max-width: 1050px) {
                     width: 40%;
@@ -295,6 +313,12 @@
                 @media screen and (max-width: 1620px) {
                     width: 100%;
                 }
+            }
+            @media screen and (max-width: 768px) {
+                &:nth-child(1){
+                    display: none;
+                }
+                width: 100%;
             }
 
             &:nth-child(1){
