--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -134,4 +134,9 @@
         </div>
     </div> -->
 </div>
-
+<div class="gnb-link">
+    <ul class="store-gnb">
+        <li><span>"<b>빠르고 쉽게</b> 제품을 주문하세요"</span></li>
+        <li><a href="http://storefarm.naver.com/doorisan"><span>스토어 바로가기<i class="arrow"></i></span></a></li>
+    </ul>
+</div>
