--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -2,7 +2,7 @@
     & .boundary {
         // max-width: 1680px !important;
         max-width: none !important;
-        max-height: 800px;
+        // max-height: 700px;
         padding: 0 !important;
     }
     & .bg {
@@ -30,8 +30,8 @@
         // }
     }
     & .sparassis-crispa {
-        background: #fdfcfa url("/assets/images/bg-pattern.png") repeat;
-        height: 600px;
+        // background: #fdfcfa url("/assets/images/bg-pattern.png") repeat;
+        height: 800px;
         &.grape-bg{
             background-color: #fff;
             .inner-content{
@@ -65,7 +65,7 @@
             width: 100%;
             height: 100%;
             max-width: 1400px;
-            padding:90px 0 60px;
+            padding: 80px 0 60px;
             position: relative;
             @media screen and (max-width: 980px) {
                 width:100%;
@@ -98,6 +98,9 @@
             .desc{
                 max-width: 990px;
                 margin: 50px auto 0;
+                & p {
+                    font-size: 1.176em;
+                }
                 & .source-link {
                     display: block;
                     margin-top: 25px;
@@ -213,7 +216,7 @@
     }
 
     & .grape {
-        height: 500px;
+        height: 530px;
         & .bg {
             background: transparent url("/assets/images/grape-01.jpg") repeat-x center center/cover;
         }
@@ -240,8 +243,6 @@
             }
         }
     }
-
-
 
     & .wasong {
         height: 500px;
