상품 이미지 및 가격 변경

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -3,6 +3,9 @@
     display: block;
     padding: 0 !important;
     margin: 0;
+    @media screen and (max-width: 980px) {
+        display: none;
+    }
     & .picstream {
         position: relative;
         width: 100%;
