--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-<div id="grape" class="boundary grape grape-bg">
+<div id="grape" class="boundary grape grape-bg" style="display:none;">
     <div class="bg grape-bg2"></div>
     <!-- <div class="inner-content">
         <div class="image grape">
