--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -9,6 +9,7 @@ header {
     margin-top: 30px;
     @include transition(opacity .3s ease);
     @media screen and (max-width: 980px) {
+        display: none;
         position: absolute;
         top: 0;
         margin-top: 10px;
@@ -59,7 +60,7 @@ header {
     &.floating {
         opacity: 1;
         top: 0;
-        border-bottom: 1px solid #c1c1c1;
+        border-bottom: 1px solid #e9e9e9;
         @media screen and (max-width: 980px) {
             display: block;
             & .logo {
